// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch> renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 44,
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <RCTSwitch
    accessibilityRole="button"
    activeThumbColor="#ffffff"
    activeTrackColor="#10c0bc"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 28,
        },
      ]
    }
    thumbTintColor="#ffffff"
    value={false}
  />
</View>
`;

exports[`<Switch> when {color} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 44,
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <RCTSwitch
    accessibilityRole="button"
    activeThumbColor="#ffffff"
    activeTrackColor="green"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 28,
        },
      ]
    }
    thumbTintColor="#ffffff"
    value={true}
  />
</View>
`;

exports[`<Switch> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 44,
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <RCTSwitch
    accessibilityRole="button"
    activeThumbColor="#ffffff"
    activeTrackColor="#10c0bc"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 28,
        },
      ]
    }
    thumbTintColor="#ffffff"
    value={false}
    visible={true}
  />
</View>
`;

exports[`<Switch> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 44,
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <RCTSwitch
    accessibilityRole="button"
    activeThumbColor="#ffffff"
    activeTrackColor="#10c0bc"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 28,
        },
      ]
    }
    thumbTintColor="#ffffff"
    value={false}
  />
  <Text
    numberOfLines={2}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 18,
          "fontWeight": "600",
        },
        Object {
          "color": "#707070",
        },
        Object {
          "color": "#4a4a4a",
          "marginBottom": 0,
          "marginLeft": 8,
        },
      ]
    }
  >
    Hello world
  </Text>
</View>
`;

exports[`<Switch> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "height": 44,
        "marginBottom": 20,
      },
      Object {
        "backgroundColor": "orange",
      },
    ]
  }
>
  <RCTSwitch
    accessibilityRole="button"
    activeThumbColor="#ffffff"
    activeTrackColor="#10c0bc"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 28,
        },
      ]
    }
    thumbTintColor="#ffffff"
    value={false}
  />
</View>
`;
